--- a/web01/purchase.html
+++ b/web01/purchase.html
@@ -23,12 +23,13 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <style>
-.hd { width: 100%; height: 50px; position: fixed; }
-
+.hd { width: 100%; height: 50px; position: absolute; top: 0; left: 0; z-index: 999; }
+ 
 .vs { clear: both; width: 100%; height: 350px; overflow: hidden; }
 .vs img { display: block; width: 100%; height: auto; }
 .bread { clear: both; width: 100%; height: auto; line-height: 30px; border-bottom:2px solid #eee; }
 .bread_fr { width: 1200px; margin: 20px 30px; }
+.home { color: #222; }
 [name=opt].sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
 .page:after { content: ""; display: block; clear: both; }
@@ -43,7 +44,7 @@
 .model_con li.model_lst { display: block; margin: 50px; padding: 10px; height: 220px; border: 3px solid #ddd; }
 .model_con li.model_lst a { float: left; width: 400px; height: 214px; background-color: #ddd; }
 .model con li.model_lst img{ display: block; width: 100%; height: auto; overflow: hidden; }
-.model_sub { float: left; padding-top: 20px; padding-left: 60px; width: 50%; }
+.model_sub { float: left; padding-top: 20px; padding-left: 100px; width: 50%; }
 .sub_tit { text-overflow: ellipsis; overflow: hidden; white-space: nowrap; font-size: 18px; }
 .sub_con { text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding-top: 10px; color: #666; font-size: 15px; }
 .model_info { padding-top: 50px; display: table; width: 100%; }
@@ -72,11 +73,15 @@
 .guide_wrap #step3 { float: left; width: 20%; height: auto; text-align: center; }
 .guide_wrap #step4 { float: left; width: 20%; height: auto; text-align: center; }
 .guide_wrap #step5 { float: left; width: 20%; height: auto; text-align: center; }
-.guide_step { clear: both; padding: 50px 0; }
+.guide_step { clear: both; padding: 80px 0; position: relative; border-bottom: 1px solid #999; }
 .guide_step a { display: block; width: 75px; height: 75px; background-repeat: no-repeat; background-color: #007fa8; }
 .guide_step img { width: 70px; height: auto; }
-.guide_step .step { display: block; padding: 30px 15px; border-bottom: 1px solid #999; font-size: 20px; }
+.guide_step .step { display: block; padding: 20px 15px; border-bottom: 1px solid #999; font-size: 18px; }
 .guide_step p { width: 100%; margin: 30px auto; text-align: center; font-weight: 800; }
+.step_pro { display: block; width: 100%; margin-top: 50px; }
+.step_pro ul { text-align: center; }
+.step_pro ul li { display: inline-block; margin: 0 80px; font-size: 16px; }
+.step_pro ul li .pro_num { display: block; float: left; width: 26px; height: 26px; border-radius: 16px; background-color: #007fa8; color: #fff; margin-right: 10px; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
