--- a/web01/join.html
+++ b/web01/join.html
@@ -30,6 +30,7 @@
 .vs img { display: block; width: 100%; height: auto; }
 .bread { clear: both; width: 100%; height: auto; }
 .bread_fr { width: 1200px; margin: 20px 30px; }
+.home { color: #222; }
 .sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
 .page:after { content: ""; display: block; clear: both; }
