--- a/web01/service.html
+++ b/web01/service.html
@@ -29,6 +29,7 @@
 .vs img { display: block; width: 100%; height: auto; }
 .bread { clear: both; width: 100%; height: auto; line-height: 30px; border-bottom:2px solid #eee; }
 .bread_fr { width: 1200px; margin: 20px 30px; }
+.home { color: #222; }
 [name=opt].sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
 .page:after { content: ""; display: block; clear: both; }
@@ -37,9 +38,27 @@
 .content { display: none; }
 .content:target { display: block; }
 .page_tit { padding-top: 1em; }
+.faq { display: block; clear: both; }
+.faq_wrap { display: block; margin: 50px auto; }
+.faq_tit { display: block; clear: both; margin-left: 20px; margin-bottom: 60px; border-bottom: 1px solid #999; padding-bottom: 30px; }
+.top_lst { display: block; width: 100%; height: auto; }
+.faq_con { float: left; width: 18%; height: 150px; border: 1px solid #999; margin-left: 20px; }
+.faq_con:hover { width: 18%; height: 148px; border: 2px solid #007fa8; }
+.faq_con .top_tit { display: block; margin: 20px; font-size: 18px; font-weight: 600; color: #007fa8; }
+.faq_con .top_qna { display: block; margin: 20px; font-size: 12px; line-height: 1.5; font-weight: 600; color: #444; }
+
+.not { display: block; clear: both; }
+.not_wrap { display: block; margin: 50px auto; position: relative; }
+.not_tit { display: block; border: 1px solid #999; padding: 30px; line-height: 2; font-size: 16px; letter-spacing: -1px; } 
+.not_warn { display: block; padding: 10px 30px; font-size: 15px; text-decoration: underline; letter-spacing: -1px; }
+.not_ask { display: block; padding: 30px; letter-spacing: -1px; }
+.req { display: block; float: right; margin: 0; }
+.req:before { content: "* "; clear: both; white-space: nowrap; color: #c50000; letter-spacing: -1px; }
+.not_con { display: block; clear: both; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
+
 </style>
 <script>
 $(document).ready(function(){
@@ -208,15 +227,15 @@ $(document).ready(function(){
                     <div class="not">
                         <div class="not_wrap">
                             <p class="not_tit">
-                            ※ 고객님의 소중한 정보 보호를 위해 로그인은 30분간 유지되며, 이 후 자동으로 로그아웃 되어 1:1문의를 작성하실 수 없습니다.
-                            ※ 고객님의 문의 관련 정보는 접수일 기준 1년간 보관되며, 기간 만료 후 자동 폐기됩니다.
-                            ※ 1:1 문의를 통한 전화상담 요청은 불가하오니 이점 양해하여 주시기 바랍니다.
+                            ※ 고객님의 소중한 정보 보호를 위해 로그인은 30분간 유지되며, 이 후 자동으로 로그아웃 되어 1:1문의를 작성하실 수 없습니다.<br>
+                            ※ 고객님의 문의 관련 정보는 접수일 기준 1년간 보관되며, 기간 만료 후 자동 폐기됩니다.<br>
+                            ※ 1:1 문의를 통한 전화상담 요청은 불가하오니 이점 양해하여 주시기 바랍니다.<br>
                             </p>
-                            <p class="not_tit" id="not_tit">
+                            <p class="not_warn" id="not_tit">
                             ※ 문의 내용 중 욕설, 폭언, 위협, 허위사실 등이 포함도리 경우 모욕, 협박, 명예훼손 등으로 간주하여 답변이 제외될 수 있으며, 관련 법규에 의거 처벌될 수 있습니다.
                             </p>
                             <p class="not_ask">문의 사항을 상세히 작성해주세요.</p>
-                            <small class="req">* 입력 항목</small>
+                            <small class="req">입력 항목</small>
                         </div>
                         <div class="not_con">
                             <table>
