--- a/web01/service.html
+++ b/web01/service.html
@@ -39,7 +39,7 @@
 .content:target { display: block; }
 .page_tit { padding-top: 1em; }
 .faq { display: block; clear: both; }
-.faq_wrap { display: block; margin: 50px auto; }
+.faq_wrap { display: block; margin: 50px auto; border-bottom: 1px solid #999; padding-bottom: 230px; }
 .faq_tit { display: block; clear: both; margin-left: 20px; margin-bottom: 60px; border-bottom: 1px solid #999; padding-bottom: 30px; }
 .top_lst { display: block; width: 100%; height: auto; }
 .faq_con { float: left; width: 18%; height: 150px; border: 1px solid #999; margin-left: 20px; }
@@ -55,6 +55,9 @@
 .req { display: block; float: right; margin: 0; }
 .req:before { content: "* "; clear: both; white-space: nowrap; color: #c50000; letter-spacing: -1px; }
 .not_con { display: block; clear: both; }
+.not_con table { width: 60%; height: auto; border: 3px solid #007fa8; padding: 30px; margin: 0 auto; }
+.not_con table tbody { display: block; }
+.not_con table tbody th { clear: both; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
