--- a/web01/service.html
+++ b/web01/service.html
@@ -38,26 +38,37 @@
 .content { display: none; }
 .content:target { display: block; }
 .page_tit { padding-top: 1em; }
-.faq { display: block; clear: both; }
+.faq { display: block; clear: both; width: 100%; height: auto; }
 .faq_wrap { display: block; margin: 50px auto; border-bottom: 1px solid #999; padding-bottom: 230px; }
-.faq_tit { display: block; clear: both; margin-left: 20px; margin-bottom: 60px; border-bottom: 1px solid #999; padding-bottom: 30px; }
+.faq_tit { display: block; clear: both; margin-left: 20px; }
 .top_lst { display: block; width: 100%; height: auto; }
-.faq_con { float: left; width: 18%; height: 150px; border: 1px solid #999; margin-left: 20px; }
+.faq_con { float: left; width: 18%; height: 150px; border: 1px solid #999; margin-left: 20px; margin-top: 50px; }
 .faq_con:hover { width: 18%; height: 148px; border: 2px solid #007fa8; }
 .faq_con .top_tit { display: block; margin: 20px; font-size: 18px; font-weight: 600; color: #007fa8; }
 .faq_con .top_qna { display: block; margin: 20px; font-size: 12px; line-height: 1.5; font-weight: 600; color: #444; }
 
-.not { display: block; clear: both; }
+.not { display: block; clear: both; position: relative; }
 .not_wrap { display: block; margin: 50px auto; position: relative; }
 .not_tit { display: block; border: 1px solid #999; padding: 30px; line-height: 2; font-size: 16px; letter-spacing: -1px; } 
-.not_warn { display: block; padding: 10px 30px; font-size: 15px; text-decoration: underline; letter-spacing: -1px; }
-.not_ask { display: block; padding: 30px; letter-spacing: -1px; }
+.not_warn { display: block; padding: 20px 30px; font-size: 15px; text-decoration: underline; letter-spacing: -1px; }
+.not_ask { display: block; padding: 0 30px; letter-spacing: -1px; }
 .req { display: block; float: right; margin: 0; }
 .req:before { content: "* "; clear: both; white-space: nowrap; color: #c50000; letter-spacing: -1px; }
-.not_con { display: block; clear: both; }
-.not_con table { width: 60%; height: auto; border: 3px solid #007fa8; padding: 30px; margin: 0 auto; }
-.not_con table tbody { display: block; }
-.not_con table tbody th { clear: both; }
+.not_con { display: block; clear: both; position: relative; }
+.not_con table { width: 60%; height: auto; border: 3px solid #007fa8; margin: 100px auto; padding: 50px; }
+.not_con table tr th:after { content: "* "; clear: both; white-space: nowrap; color: #c50000; }
+.not_btn { position: absolute; bottom: -95px; right: 380px; z-index: 85; }
+.btn_wrap { clear: both; display: block; margin: 20px; }
+[type=reset] { width: 180px; height: 55px; margin-right: 20px; font-size: 16px; color: #fff; letter-spacing: -1px; font-weight: 600; background-color: #888; border: 1px solid #888; cursor: pointer; }
+[type=submit] { width: 180px; height: 55px; margin-left: 20px; font-size: 16px; color: #fff; letter-spacing: -1px; font-weight: 600; background-color: #002c5f; border: 1px solid #002c5f; cursor: pointer; }
+
+.board { display: block; clear: both; width: 100%; max-width: 1120px; margin: 20px auto; padding: 60px 40px; }
+.board_wrap { margin-bottom: 50px; position: relative; }
+.board_wrap li { padding: 50px 0; border-bottom: 1px solid #999; }
+.board_list { padding: 0; }
+.board_th { font-size: 20px; color: #222; padding: 1em 0; font-weight: 600; letter-spacing: -1.5px; }
+.board_tb { font-size: 16px; color: #626262; padding-bottom: 10px; letter-spacing: -1px; }
+.board_date { font-size: 14px; color: #626262; padding: 1em 0; font-weight: 600; letter-spacing: 0.5px; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -261,13 +272,13 @@ $(document).ready(function(){
                                     </tr>
                                 </tbody>
                             </table>
-                            <section class="not_btn">
-                                <div class="btn_wrap">
-                                    <input type="reset" value="취소">
-                                    <input type="submit" value="등록">
-                                </div>
-                            </section>
                         </div>
+                        <section class="not_btn">
+                            <div class="btn_wrap">
+                                <a href="login.html"><input type="reset" value="취소"></a>
+                                <a href=""><input type="submit" value="등록"></a>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </section>
@@ -299,7 +310,7 @@ $(document).ready(function(){
                     <div class="board">
                         <ul class="board_wrap">
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">제휴/위탁 업체 사명 변경 관련 개인정보 처리방침과 이용약관 개정</p>
                                     <p class="board_tb">안녕하세요. 현대자동차입니다.
                                         항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다.
@@ -308,63 +319,63 @@ $(document).ready(function(){
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">캐스퍼 온라인 세일즈 지원 대행사 모집 공고</p>
                                     <p class="board_tb">안녕하세요. 현대자동차입니다. 캐스퍼 온라인 세일즈 지원을 대행할 운영사를 모집합니다. 희망 업체에서는 아래 내용을 참조하여 신청해주시기 바랍니다.</p>
                                     <p class="board_date">2022.09.22</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">2022년 현대자동차 국내 프로모션(행사) 부문 협력업체 모집</p>
                                     <p class="board_tb">현대자동차에서는 국내 프로모션 활동 및 각종 대고객 이벤트 행사를 효과적으로 수행(대행)할 역량있는 협력업체를 모집하오니 희망 업체에서는 소정의 절차에 따라 신청/접수하여 주시기 바랍니다.</p>
                                     <p class="board_date">2022.09.21</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">블루멤버스 제휴서비스 종료 안내 (하나투어)</p>
                                     <p class="board_tb">안녕하세요. 블루멤버스입니다. 항상 현대자동차를 사랑해 주시는 회원 여러분께 감사드립니다. 블루멤버스의 서비스가 아래와 같이 변경되어 회원 여러분께 안내드립니다.</p>
                                     <p class="board_date">2022.09.20</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">현대 카페이 위치기반서비스 이용약관 개정 공지</p>
                                     <p class="board_tb">안녕하세요. 현대자동차입니다. 항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다. 현대 카페이 위치기반서비스 이용약관이 아래와 같이 개정됨을 알려드립니다.</p>
                                     <p class="board_date">2022.09.15</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">블루링크 위치 공유 서비스 이용불가 안내</p>
                                     <p class="board_tb">안녕하세요 블루링크입니다. 현대자동차를 사랑해주시는 고객 여러분께 감사드립니다. 시스템 개선 작업으로 인하여, 차량 관리 서비스의 이용이 일시적으로 불가합니다.</p>
                                     <p class="board_date">2022.09.15</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">캐스퍼 온라인 개인정보 처리방침 개정</p>
                                     <p class="board_tb">안녕하세요. 현대자동차입니다. 현대자동차를 사랑해주시고 아껴주시는 회원 여러분께 감사드립니다. 캐스퍼 온라인 개인정보 처리방침이 아래와 같이 변경됨을 알려드립니다.</p>
                                     <p class="board_date">2022.09.14</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">블루링크 개인정보 처리방침 개정</p>
                                     <p class="board_tb">안녕하세요. 블루링크입니다. 현대자동차를 사랑해주시고 아껴주시는 회원 여러분께 감사드립니다. 블루링크 개인정보 처리방침이 아래와 같이 변경됨을 알려드립니다.</p>
                                     <p class="board_date">2022.09.08</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">디지털 키 개인정보 처리방침, 위치기반 서비스 이용약관 개정</p>
                                     <p class="board_tb">안녕하세요. 현대자동차입니다. 항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다. 디지털 키 개인정보 처리방침 및 위치기반서비스 이용약관이 아래와 같이 변경됨을 알려드립니다.</p>
                                     <p class="board_date">2022.09.07</p>
                                 </div>
                             </li>
                             <li>
-                                <div>
+                                <div class="borad_list">
                                     <p class="board_th">블루멤버스 제휴서비스 종료 안내 (삼성화재 다이렉트 운전자보험)</p>
                                     <p class="board_tb">안녕하세요. 블루멤버스입니다. 항상 현대자동차를 사랑해 주시는 회원 여러분께 감사드립니다. 블루멤버스의 서비스가 아래와 같이 변경되어 회원 여러분께 안내드립니다.</p>
                                     <p class="board_date">2022.08.29</p>
