--- a/web01/company.html
+++ b/web01/company.html
@@ -41,8 +41,14 @@
 .page_tit { padding-top: 1em; font-weight: 600; padding: 50px 0; }
 .sub { display: block; width: 100%; height: 80px; text-align: center; }
 
-
-
+.map { display: block; margin-bottom: 50px; z-index: 50; }
+#map1, #map2, #map3 { width: 100%; max-width: 1120px; padding: 30px; }
+.map_tit { display: block; text-decoration: underline; }
+.map_con { margin: 20px 0 50px 0; color: #999; }
+.map ul { width: 100%; }
+.map ul li { display: block; line-height: 3; letter-spacing: -1px; }
+.map_lst { display: block; float: left; width: 120px; font-weight: 600; }
+.map_info { display: block; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -184,9 +190,9 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">사업망</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d791.7163275349686!2d127.04203549367101!3d37.46390193836695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca6d4860bd40f%3A0x4471ee6ed8926836!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDtl4zrponroZwgMTI!5e0!3m2!1sko!2skr!4v1666085043689!5m2!1sko!2skr" 
-                    width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d791.7163275349686!2d127.04203549367101!3d37.46390193836695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca6d4860bd40f%3A0x4471ee6ed8926836!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDtl4zrponroZwgMTI!5e0!3m2!1sko!2skr!4v1666085043689!5m2!1sko!2skr" 
+                        width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div id="map1">
                             <h3 class="map_tit">양재동 사옥</h3>
                             <p class="map_con">현대자동차 양재동 사옥은 서울의 관문인 경부고속도로 입구에 위치하고 있으며, 
@@ -194,15 +200,15 @@ $(document).ready(function(){
                             <ul>
                                 <li>
                                     <span class="map_lst">주소</span>
-                                    <p class="map_lst">서울특별시 서초구 헌릉로 12</p>
+                                    <p class="map_info">서울특별시 서초구 헌릉로 12</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">전화</span>
-                                    <p class="map_lst">02) 3464-1114</p>
+                                    <p class="map_info">02) 3464-1114</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">FAX</span>
-                                    <p class="map_lst">02) 3464-3477</p>
+                                    <p class="map_info">02) 3464-3477</p>
                                 </li>
                             </ul>
                         </div>
@@ -214,15 +220,15 @@ $(document).ready(function(){
                             <ul>
                                 <li>
                                     <span class="map_lst">주소</span>
-                                    <p class="map_lst">울산광역시 북구 염포로 700 울산공장 정문 (울산광역시 북구 양정동 700번지)</p>
+                                    <p class="map_info">울산광역시 북구 염포로 700 울산공장 정문 (울산광역시 북구 양정동 700번지)</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">전화</span>
-                                    <p class="map_lst">052) 215-2114</p>
+                                    <p class="map_info">052) 215-2114</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">FAX</span>
-                                    <p class="map_lst">052) 215-2232~3</p>
+                                    <p class="map_info">052) 215-2232~3</p>
                                 </li>
                             </ul>
                         </div>
@@ -235,15 +241,15 @@ $(document).ready(function(){
                             <ul>
                                 <li>
                                     <span class="map_lst">주소</span>
-                                    <p class="map_lst">경기도 화성시 현대연구소로 150</p>
+                                    <p class="map_info">경기도 화성시 현대연구소로 150</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">전화</span>
-                                    <p class="map_lst">031) 368-5114</p>
+                                    <p class="map_info">031) 368-5114</p>
                                 </li>
                                 <li>
                                     <span class="map_lst">FAX</span>
-                                    <p class="map_lst">031) 368-5107</p>
+                                    <p class="map_info">031) 368-5107</p>
                                 </li>
                             </ul>
                         </div>
