--- a/web01/login.html
+++ b/web01/login.html
@@ -34,8 +34,20 @@
 .page:after { content: ""; display: block; clear: both; }
 .page_wrap { width: 1200px; margin: auto; }
 
-.content { display: none; }
-.content:target { display: block; }
+.content { display: block; }
+.frm { border:2px solid #333; padding: 24px; width: 580px; margin:50px auto; }
+.frm_tb { display:table; margin:40px auto;  }
+.frm_tb tr { display:table-row; }
+.frm_tb td, .frm_tb th { display:table-cell; }
+.frm_tb th { width:200px; height: 48px;  }
+.frm_tb td { width:300px; height: 48px; }
+.frm_tb label:before { content:"*"; }
+
+.in_dt { background-color:#fff; height:32px; line-height: 32px; width: 280px; 
+color:#f36; font-size:16px; text-indent:0.5em; }
+.in_btn { display:block; background-color:#333; min-width:120px; height: 32px; 
+line-height: 32px; border-radius:20px; float:left; margin-left:80px; margin-right:20px; cursor:pointer; }
+.in_btn:hover { background-color: deepskyblue; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -126,15 +138,27 @@ $(document).ready(function(){
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">로그인</h2>
-                    <div class="login">
-                        <form action="" method="post" name="fm1" id="loginForm">
-                            <table class="fm">
+                    <h2 class="page_title">로그인</h2>
+                    <div class="form_fr">
+                        <form name="frm1" action="" method="post" id="loginForm" class="frm">
+                            <table class="frm_tb">
                                 <tbody>
                                     <tr>
                                         <th><label for="id">아이디</label></th>
                                         <td>
-                                            
+                                            <input type="text" id="id" name="id" class="in_dt" required autofocus>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><label for="id">비밀번호</label></th>
+                                        <td>
+                                            <input type="password" id="pw" name="pw" class="in_dt" required>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <button type="submit" class="in_btn">로그인</button>
+                                            <button type="reset" class="in_btn">취소</button>
                                         </td>
                                     </tr>
                                 </tbody>
